--- a/final.ipynb
+++ b/final.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMLycAYallNoEMGmXN9Vz+J",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Zeba-Kauser/Web-Scraping_Project/blob/main/final.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,94 +12,94 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# ***Web Scraping Project***"
-      ],
       "metadata": {
         "id": "J_4RcOGkzgn8"
-      }
+      },
+      "source": [
+        "# ***Web Scraping Project***"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "For this project  I am using  http://books.toscrape.com/index.html which is a website specifically designed for web scraping purposes.\n"
-      ],
       "metadata": {
         "id": "fjYym_WevgzJ"
-      }
+      },
+      "source": [
+        "For this project  I am using  http://books.toscrape.com/index.html which is a website specifically designed for web scraping purposes.\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "####Task: Grab the Category, Name, Rating, Price, and Image URL information for all 1000 products, and store the data in a CSV file for presentation in Power BI."
-      ],
       "metadata": {
         "id": "jDdnfc-AxGvY"
-      }
+      },
+      "source": [
+        "####Task: Grab the Category, Name, Rating, Price, and Image URL information for all 1000 products, and store the data in a CSV file for presentation in Power BI."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Import the the necessary  libraries we need to scrape a website.**"
-      ],
       "metadata": {
         "id": "slCFIPh6_r0T"
-      }
+      },
+      "source": [
+        "**Import the the necessary  libraries we need to scrape a website.**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "C-zUytYO_zOo"
+      },
+      "outputs": [],
       "source": [
         "import requests  # Used for making HTTP requests\n",
         "from bs4 import BeautifulSoup  # to scrape information from web page\n",
         "from urllib.parse import urljoin  # to constructs a full (absolute) URL by combining a base URL with another URL.\n",
         "import csv  # for working with CSV files"
-      ],
-      "metadata": {
-        "id": "C-zUytYO_zOo"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "First Let's get the Header of the website"
-      ],
       "metadata": {
         "id": "iA2wTuAR6DZa"
-      }
+      },
+      "source": [
+        "First Let's get the Header of the website"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "xa7gRKZxz0Yt"
+      },
+      "outputs": [],
       "source": [
         "url = 'https://books.toscrape.com/index.html'\n",
         "response = requests.get(url)\n",
         "soup = BeautifulSoup(response.content, 'html.parser')  # Specify 'html.parser' as the parser\n",
         "Header = soup.header.text.strip()  # Find the header within the <header> tag\n",
         "print(Header)"
-      ],
-      "metadata": {
-        "id": "xa7gRKZxz0Yt",
-        "collapsed": true
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Let's figure out the URL structure to go through  all pages category wise"
-      ],
       "metadata": {
         "id": "ZS3TOQuxzpwO"
-      }
+      },
+      "source": [
+        "Let's figure out the URL structure to go through  all pages category wise"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "GyUMl0dN7Uwk",
-        "collapsed": true
+        "collapsed": true,
+        "id": "GyUMl0dN7Uwk"
       },
       "outputs": [],
       "source": [
@@ -142,16 +126,22 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4DXwG_ZlDWXJ"
+      },
       "source": [
         "Some categorys have additional pages.\n",
         "Let's checks each category page for the presence of extra pages."
-      ],
-      "metadata": {
-        "id": "4DXwG_ZlDWXJ"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "-A3eUM8zDlKY"
+      },
+      "outputs": [],
       "source": [
         "import requests\n",
         "from bs4 import BeautifulSoup\n",
@@ -165,37 +155,37 @@
         "  Extra_pages = soup.find('form').text.strip() #Find a form element and extract its text\n",
         "  print(category)\n",
         "  print(Extra_pages)"
-      ],
-      "metadata": {
-        "id": "-A3eUM8zDlKY",
-        "collapsed": true
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "wLIUiB8ZGvp7"
+      },
       "source": [
         "We can see categories with additional pages showing text 'showing 1 to 20'\n",
         "So  we will Check each category page information with  presence of the text 'to' and extracts the total number of pages.\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "wLIUiB8ZGvp7"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Let's extract the total number of pages from the text content"
-      ],
       "metadata": {
         "id": "W7g4FGhHzSRL"
-      }
+      },
+      "source": [
+        "Let's extract the total number of pages from the text content"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "9cTuGlpWzQXn"
+      },
+      "outputs": [],
       "source": [
         "url = category_links\n",
         "# Loop through each category link\n",
@@ -209,16 +199,13 @@
         "    all_pages = nav_bar.text.strip()\n",
         "    page_range = int(all_pages[10])\n",
         "    print(page_range)"
-      ],
-      "metadata": {
-        "id": "9cTuGlpWzQXn",
-        "collapsed": true
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Uc0rDXn6o1Rk"
+      },
       "source": [
         "We  allready have the url of  index page. Now  we need  url starting from 2 page.   \n",
         "We can see that the URL structure of aditonal page is  following:\n",
@@ -230,13 +217,15 @@
         "https://books.toscrape.com/catalogue/category/books/mystery_3/index.html\n",
         "\n",
         "we can create additional URLs by replacing the **'index.html'** part with **'page-{page_num}.html'** where page_num ranges from 2 to total number of pages."
-      ],
-      "metadata": {
-        "id": "Uc0rDXn6o1Rk"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "baXt8wsh68wM"
+      },
+      "outputs": [],
       "source": [
         "additional_pages = []\n",
         "for category_link in category_links:\n",
@@ -245,49 +234,49 @@
         "      page_url = category_link.replace('index.html', f'page-{page_num}.html') # Generate a new page URL by replacing 'index.html' with 'page-{page_num}.html'\n",
         "      additional_pages.append(page_url)\n",
         "additional_pages"
-      ],
-      "metadata": {
-        "id": "baXt8wsh68wM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9pXWtPNDDUBt"
+      },
       "source": [
         "The additional_pages list  contains URLs for additional pages for each category\n",
         "Now let's add all the URLs from additional_pages to category_links\n"
-      ],
-      "metadata": {
-        "id": "9pXWtPNDDUBt"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "q6LCM7SU9ZZI"
+      },
+      "outputs": [],
       "source": [
         "# Extend the category_links list with the additional_pages list\n",
         "category_links.extend(additional_pages)\n",
         "# Print the modified link_list\n",
         "category_links"
-      ],
-      "metadata": {
-        "id": "q6LCM7SU9ZZI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ufljrO3nKfth"
+      },
       "source": [
         "Lets collect information about books from categeory URLs.\n",
         "The category, title, rating, price, and the absolute URL of the book image."
-      ],
-      "metadata": {
-        "id": "ufljrO3nKfth"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "77k4rUnd-Did"
+      },
+      "outputs": [],
       "source": [
         "data = []  # Initialize an empty list to store extracted data\n",
         "url_list = category_links  # Assign the list of category links to the variable url_list\n",
@@ -326,45 +315,45 @@
         "\n",
         "        # Append book data to the data list\n",
         "        data.append([category, title, rating, price, absolute_image_url])\n"
-      ],
-      "metadata": {
-        "id": "77k4rUnd-Did"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Let's print the extracted data for each book."
-      ],
       "metadata": {
         "id": "9p9fk6paOb-n"
-      }
+      },
+      "source": [
+        "Let's print the extracted data for each book."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for cat_data in data:\n",
-        "    print(cat_data)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Z2Avhw5KJInD"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "for cat_data in data:\n",
+        "    print(cat_data)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Let's save the information in csv file"
-      ],
       "metadata": {
         "id": "qqcdRe7sPLEC"
-      }
+      },
+      "source": [
+        "Let's save the information in csv file"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "WMFwYH3TtQJD"
+      },
+      "outputs": [],
       "source": [
         "# Define the columns and data\n",
         "columns = ['category','BookTitle','rating','price','image_url']\n",
@@ -384,30 +373,41 @@
         "\n",
         "# Print a success message indicating that the CSV file has been created\n",
         "print(f'The CSV file \"{file_name}\" has been created successfully.')"
-      ],
-      "metadata": {
-        "id": "WMFwYH3TtQJD"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "We can download the csv file All_product and load it into Power BI to create reports."
-      ],
       "metadata": {
         "id": "o2owjfh7QsQ2"
-      }
+      },
+      "source": [
+        "We can download the csv file All_product and load it into Power BI to create reports."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "mU5y8AfrRqYu"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMLycAYallNoEMGmXN9Vz+J",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
